--- a/trunk/CS580HW2/CS580HW2.vcproj
+++ b/trunk/CS580HW2/CS580HW2.vcproj
@@ -337,6 +337,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\disp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="MainFrm.cpp"
 				>
 				<FileConfiguration
@@ -421,6 +425,10 @@
 			</File>
 			<File
 				RelativePath="CS580HWView.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disp.h"
 				>
 			</File>
 			<File
