Included files from HW3 so the assignment compiles. Note that right now the program exits before bringing up the rendering console because GzPutAttribute has not been updated to handle some of the required parameters for this assignment.

--- a/CS580HW4/CS580HW4.vcproj
+++ b/CS580HW4/CS580HW4.vcproj
@@ -333,6 +333,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\disp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="MainFrm.cpp"
 				>
 				<FileConfiguration
@@ -351,6 +355,10 @@
 						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\rend.cpp"
+				>
 			</File>
 			<File
 				RelativePath="RotateDlg.cpp"
@@ -460,11 +468,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\disp.h"
+				>
+			</File>
+			<File
 				RelativePath="gz.h"
 				>
 			</File>
 			<File
 				RelativePath="MainFrm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\rend.h"
 				>
 			</File>
 			<File
